welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: '(' expected but identifier found.
  if estSurMessage() 
     ^BDRBuggle:6: error: '(' expected but identifier found.
    if litMessage()="L" {gauche();avance();}
       ^BDRBuggle:7: error: '(' expected but identifier found.
    if litMessage()="I" {retourne();avance();}
       ^BDRBuggle:8: error: '(' expected but identifier found.
    if litMessage()="A" {avance();}
       ^BDRBuggle:9: error: '(' expected but identifier found.
    if litMessage()="B" {avance();avance();}
       ^BDRBuggle:10: error: '(' expected but identifier found.
    if litMessage()="C" {avance();avance();avance();}
       ^BDRBuggle:11: error: '(' expected but identifier found.
    if litMessage()="Z" {recule();}
       ^BDRBuggle:12: error: '(' expected but identifier found.
    if litMessage()="Y" {recule();recule();}
       ^BDRBuggle:13: error: '(' expected but identifier found.
    if litMessage()="X" {recule();recule();recule();}
       ^BDRBuggle:15: error: illegal start of simple expression
  }
  ^